--- a/SparCraft/VisualStudio/SparCraft_main.vcxproj
+++ b/SparCraft/VisualStudio/SparCraft_main.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="..\source\gui\GUIGame.h" />
     <ClInclude Include="..\source\gui\GUITools.h" />
     <ClInclude Include="..\source\main\SearchExperiment.h" />
+    <ClInclude Include="..\source\main\SparCraftExperiment.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\gui\GUI.cpp" />
@@ -134,6 +135,7 @@
     <ClCompile Include="..\source\gui\GUITools.cpp" />
     <ClCompile Include="..\source\main\main.cpp" />
     <ClCompile Include="..\source\main\SearchExperiment.cpp" />
+    <ClCompile Include="..\source\main\SparCraftExperiment.cpp" />
     <ClCompile Include="..\source\TutorialCode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
