--- a/SparCraft/VisualStudio/SparCraft.vcxproj
+++ b/SparCraft/VisualStudio/SparCraft.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="..\source\Action.h" />
     <ClInclude Include="..\source\ActionGenerators.h" />
     <ClInclude Include="..\source\AIParameters.h" />
+    <ClInclude Include="..\source\AITools.h" />
     <ClInclude Include="..\source\AllPlayers.h" />
     <ClInclude Include="..\source\AlphaBetaMove.h" />
     <ClInclude Include="..\source\AlphaBetaSearch.h" />
@@ -180,6 +181,7 @@
     <ClCompile Include="..\source\Action.cpp" />
     <ClCompile Include="..\source\ActionGenerators.cpp" />
     <ClCompile Include="..\source\AIParameters.cpp" />
+    <ClCompile Include="..\source\AITools.cpp" />
     <ClCompile Include="..\source\AllPlayers.cpp" />
     <ClCompile Include="..\source\AlphaBetaMove.cpp" />
     <ClCompile Include="..\source\AlphaBetaSearch.cpp" />
