--- a/SparCraft/VisualStudio/SparCraft.vcxproj
+++ b/SparCraft/VisualStudio/SparCraft.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="..\source\GraphViz.hpp" />
     <ClInclude Include="..\source\Hash.h" />
     <ClInclude Include="..\source\Map.hpp" />
+    <ClInclude Include="..\source\Move.h" />
     <ClInclude Include="..\source\MoveArray.h" />
     <ClInclude Include="..\source\Player.h" />
     <ClInclude Include="..\source\PlayerProperties.h" />
@@ -192,6 +193,7 @@
     <ClCompile Include="..\source\GameState.cpp" />
     <ClCompile Include="..\source\GameStateUnitData.cpp" />
     <ClCompile Include="..\source\Hash.cpp" />
+    <ClCompile Include="..\source\Move.cpp" />
     <ClCompile Include="..\source\MoveArray.cpp" />
     <ClCompile Include="..\source\Player.cpp" />
     <ClCompile Include="..\source\PlayerProperties.cpp" />
