--- a/SparCraft/VisualStudio/SparCraft.vcxproj
+++ b/SparCraft/VisualStudio/SparCraft.vcxproj
@@ -142,17 +142,11 @@
     <ClInclude Include="..\source\Map.hpp" />
     <ClInclude Include="..\source\Move.h" />
     <ClInclude Include="..\source\MoveArray.h" />
+    <ClInclude Include="..\source\PGSParameters.h" />
     <ClInclude Include="..\source\Player.h" />
     <ClInclude Include="..\source\PlayerProperties.h" />
     <ClInclude Include="..\source\Player_AlphaBeta.h" />
     <ClInclude Include="..\source\Player_AttackClosest.h" />
-    <ClInclude Include="..\source\Player_AttackDPS.h" />
-    <ClInclude Include="..\source\Player_AttackWeakest.h" />
-    <ClInclude Include="..\source\Player_Cluster.h" />
-    <ClInclude Include="..\source\Player_Kiter.h" />
-    <ClInclude Include="..\source\Player_KiterDPS.h" />
-    <ClInclude Include="..\source\Player_Kiter_NOKDPS.h" />
-    <ClInclude Include="..\source\Player_NOKDPS.h" />
     <ClInclude Include="..\source\Player_PortfolioGreedySearch.h" />
     <ClInclude Include="..\source\Player_Random.h" />
     <ClInclude Include="..\source\Player_Script.h" />
@@ -195,17 +189,11 @@
     <ClCompile Include="..\source\Hash.cpp" />
     <ClCompile Include="..\source\Move.cpp" />
     <ClCompile Include="..\source\MoveArray.cpp" />
+    <ClCompile Include="..\source\PGSParameters.cpp" />
     <ClCompile Include="..\source\Player.cpp" />
     <ClCompile Include="..\source\PlayerProperties.cpp" />
     <ClCompile Include="..\source\Player_AlphaBeta.cpp" />
     <ClCompile Include="..\source\Player_AttackClosest.cpp" />
-    <ClCompile Include="..\source\Player_AttackDPS.cpp" />
-    <ClCompile Include="..\source\Player_AttackWeakest.cpp" />
-    <ClCompile Include="..\source\Player_Cluster.cpp" />
-    <ClCompile Include="..\source\Player_Kiter.cpp" />
-    <ClCompile Include="..\source\Player_KiterDPS.cpp" />
-    <ClCompile Include="..\source\Player_Kiter_NOKDPS.cpp" />
-    <ClCompile Include="..\source\Player_NOKDPS.cpp" />
     <ClCompile Include="..\source\Player_PortfolioGreedySearch.cpp" />
     <ClCompile Include="..\source\Player_Random.cpp" />
     <ClCompile Include="..\source\Player_Script.cpp" />
